[modify] get and delete
